--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <h1>大家好. 我是刘攀.</h1>
   <p>欢迎光临我的博客!</p>
   <p>这是我是对我的人生的一个改变！</p>
+  <ul>
+  <li>技术</li>
+  <li>心态，自信心</li>
+  <li>逻辑问题</li>
+  <li>综合能力</li>
+  </ul>
   <p>这是一篇技术博客</p>
 </body>
 </html>
