--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <title>Laurence Bradford</title>
  
-
   <link rel="stylesheet" href="main.css">
 
 </head>
@@ -20,5 +19,13 @@
   <li>综合能力</li>
   </ul>
   <p>这是一篇技术博客</p>
+  ### Line Breaks
+To force a line break, put two spaces and a newline (return) at the end of the line.
+
+	These lines
+	won't break
+
+	These lines  
+	will break
 </body>
 </html>
