--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -4,3 +4,9 @@ title: "Index"
 description: "这是刘攀的博客"
 ---
 {% include JB/setup %}
+---
+layout: post
+category : lessons
+comments : false
+tags : [yay]
+---
